Update Transcendental Aesthetic - 5.html

--- a/Critique of Pure Reason/Transcendental Aesthetic - 5.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 5.html
@@ -104,9 +104,7 @@ Section II. — Of Time<br>
 
 <p class="indent">Kant states here that the proposition "different times cannot be co-existent" is synthetic. This shows why he relied on his (slightly) more plausible arguments for the synthetic status of mathematical propositions, when he made his initial arguments for the existence of synthetic a priori propositions. If he had attempted to rely on spatio-temporal propositions, which, after all, are the actually significant ones with respect to transcendental idealism, he would have been on very shaky ground. "Different spaces are not located in the same place." I would ask the reader to ask themselves whether or not the predicate of these sentences is already in the subject.</p>
 
-<p class="indent">Here we see one of the most subtle instances of the "reifying the model" fallacy.</p>
-
-<p class="indent">The status of space and time do pose a challenge for the Epicurean...</p>
+<p class="indent">Here we see one of the most subtle instances of the "reifying the model" fallacy. Once the descriptions "time as a one dimensional number line" and "space as 3-dimensional Cartesian coordinates" have been understood once, they exert such a hold on the human mind that we automatically conflate them, and only with great difficulty can we separate the two. But time is not a 1-dimensional line. A 1-dimensional line is a brain state. Contra Kant, time is an empirical phenomenon. It's true that's not a medium-sized object on Earth, as most of the empirical phenomena we encounter are. It is rather a more fundamental physical feature of our experience, like spatiality, weight, heat, force, aesthetic quality, pleasure, pain. It is even more difficult to separate space from 3-space (despite the fac that true space is now said to be non-Euclidean by the physicists). Some objects can impress upon your senses immediately whereas others require time and energy to be expended before they can impress upon your senses.</p>
 
 </body>
 </html>
