Finished transc aesthet

--- a/Critique of Pure Reason/Transcendental Aesthetic - 5.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 5.html
@@ -29,7 +29,7 @@ Section II. — Of Time<br>
 
 <h3>Summary</h3>
 <p class="indent">
-
+Kant argues that time is not our sensory experience, but is rather a necessary precondition of all such experience. He also argues that propositions like "Time has only one dimension" are synthetic a prior truths.
 </p>
 <br>
 <br>
@@ -106,5 +106,9 @@ Section II. — Of Time<br>
 
 <p class="indent">Here we see one of the most subtle instances of the "reifying the model" fallacy. Once the descriptions "time as a one dimensional number line" and "space as 3-dimensional Cartesian coordinates" have been understood once, they exert such a hold on the human mind that we automatically conflate them, and only with great difficulty can we separate the two. But time is not a 1-dimensional line. A 1-dimensional line is a brain state. Contra Kant, time is an empirical phenomenon. It's true that's not a medium-sized object on Earth, as most of the empirical phenomena we encounter are. It is rather a more fundamental physical feature of our experience, like spatiality, weight, heat, force, aesthetic quality, pleasure, pain. It is even more difficult to separate space from 3-space (despite the fac that true space is now said to be non-Euclidean by the physicists). Some objects can impress upon your senses immediately whereas others require time and energy to be expended before they can impress upon your senses.</p>
 
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
