Started Hegel Preface III

--- a/Phenomenology of Spirit/Preface - I.html
+++ b/Phenomenology of Spirit/Preface - I.html
@@ -15,6 +15,8 @@
 <p class='indent'><b>I. The element in which truth is found is the notion; its true embodiment is a scientifically constructed system. The position and point of view of spiritual culture at the present time. A principle of Knowledge is not the completion of Knowledge: objections to formalism.</b></p>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Phenomenology of Spirit/Preface - II.html'>II.</a> The Absolute is Subject: the meaning of this statement. The sphere and element of systematic Knowledge: the course by which consciousness rises to this stage constitutes the Phenomenology of Mind</p>
 <p class='indent'><a href='https://ericlyonshansen.github.io/Phenomenology of Spirit/Preface - III.html'>III.</a> The transformation of figurative presentations and familiar ideas into thoughts; and these again into notions. To what extent is the Phenomenology of Mind negative, or how far does it contain falsity? Historical and Mathematical truth. Nature of philosophical truth, and its Method: objections to schematising formalism.</p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Phenomenology of Spirit/Preface - IV.html'>IV.</a> Requisite for the study of philosophy. The negative procedure of ratiocination: its positive procedure: its subject. Philosophising by the light of the nature: healthy common-sense: the inspiration of genius.</p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Phenomenology of Spirit/Preface - V.html'>V.</a> Conclusion: the relation of the author to his public.</p>
 <br>
 (Click <a href='https://ericlyonshansen.github.io/Phenomenology of Spirit/Table of Contents.html'>here</a> to return to the table of contents.)
 <hr>
